Shop aligns fix

--- a/web-service-gin/static/test-app/src/Shop/Shop.css
+++ b/web-service-gin/static/test-app/src/Shop/Shop.css
@@ -34,7 +34,8 @@
     padding-bottom: 1.5rem;
     padding-left: 3rem;
     padding-right: 3rem;
-    max-width: 30vw;
+    height: 100%;
+    max-width: 20vw;
     transition: box-shadow 0.3s ease;
 }
 
@@ -54,6 +55,7 @@
 .shop-item-price {
     font-size: 1.25rem;
     margin-top: 0.5rem;
+    display: block;
 }
 
 .shop-item-title {
@@ -63,6 +65,34 @@
     text-align: center;
     margin-top: 1rem;
     margin-bottom: 0.5rem;
+    display: block;
+}
+
+.item-data-container {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    justify-content: space-between;
+    height: 100%;
+}
+
+.uper-item-data {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+}
+
+
+.lower-item-data {
+    margin-top: auto; /* прижимает кнопку к низу контейнера */
+}
+
+.shop-item-title-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 3rem;
 }
 
 .title-container {
